fix well size for long quotes on mobile

--- a/quote/quotes.css
+++ b/quote/quotes.css
@@ -28,7 +28,7 @@ body {
 }
 
 .quote-container .well {
-    height: 40vh;
+    min-height: 40vh;
     opacity: 0.8;
 }
 
